--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+
 body{
     margin: 1rem;
+    font-family: Roboto, sans-serif;
+    background-color: rgb(243, 243, 243);
 }
+
+
 .preencher{
     display: flex;
     justify-content: center;
@@ -16,6 +21,8 @@ body{
 }
 .title-preencher{
     margin-bottom: .1rem;
+    font-weight: 600;
+    font-size: .8rem;
 }
 .resp-preencher{
     font-size: 1rem;
