--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
 body{
+    width: 560px;
+    height: 300px;
     margin: 1rem;
     font-family: Roboto, sans-serif;
     background-color: rgb(243, 243, 243);
@@ -9,7 +11,6 @@ body{
 .preencher{
     display: flex;
     justify-content: center;
-    background-color: aqua;
 }
 .box{
     display: flex;
@@ -36,7 +37,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 0, 255);
 }
 #folhas{
     width: 10rem;
@@ -44,19 +44,31 @@ body{
     margin-bottom: 1rem;
 }
 .btn-box{
-    background-color: blue;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
+    align-items: center;
 }
 .btn{
     width: 5rem;
     height: 2rem;
+    background-color: black;
+    color: aliceblue;
+    border-style: none;
+    border-radius: .8rem;
+    cursor: pointer;
 }
-
+.btn-opt{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+}
+.icon-copy{
+    width: 1rem;
+}
 .box-result{
-    background-color: bisque;
     height: 5.8rem;
-    margin: 1rem 0 0 0;
+    margin: .5rem 0 0 0;
     border-color: black;
     border-style: solid;
     border-width: .1rem;
@@ -64,7 +76,6 @@ body{
 
 }
 .result{
-    background-color: brown;
     padding: .8rem;
     margin: 0;
     font-size: large;
@@ -72,12 +83,39 @@ body{
     -webkit-user-select: none;
     -webkit-app-region: drag;
 }
-.div-btn{
-    display: flex;
-    justify-content: end;
-}
 .clear{
     width: 5rem;
     height: 2rem;
-    margin: .5rem 0 0 0;
+    border-style: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-weight: 600;
 }
+
+.fa-solid{
+margin: 1rem;
+cursor: pointer;
+color: black;
+}
+
+.popup {
+    font-size: .8rem;
+    position: absolute;
+    z-index: 1;
+    margin: auto;
+    width: 60px;
+    height: 20px;
+    left: 60%;
+    right: 0;
+    bottom: 25%;
+    top: 0;
+    color: rgb(63, 63, 63);
+    background-color: rgb(211, 211, 211);
+    text-align: center;
+    padding: 2px;
+    border-radius: .5rem;
+    -webkit-app-region: drag;
+    opacity: 0;
+    transition: opacity 0.3s ease; /* Adiciona uma transição suave para a mudança de opacidade */
+}
+
