--- a/style.css
+++ b/style.css
@@ -51,11 +51,14 @@ body{
 .btn{
     width: 5rem;
     height: 2rem;
-    background-color: black;
     color: aliceblue;
     border-style: none;
     border-radius: .8rem;
     cursor: pointer;
+    background-color: #000000;
+}
+.btn:active{
+    background-color: #808080;
 }
 .btn-opt{
     display: flex;
@@ -84,8 +87,8 @@ body{
     -webkit-app-region: drag;
 }
 .clear{
-    width: 5rem;
-    height: 2rem;
+    width: 3rem;
+    height: .3rem;
     border-style: none;
     cursor: pointer;
     background-color: transparent;
@@ -105,17 +108,25 @@ color: black;
     margin: auto;
     width: 60px;
     height: 20px;
-    left: 60%;
+    left: 59%;
     right: 0;
-    bottom: 25%;
+    bottom: 20%;
     top: 0;
     color: rgb(63, 63, 63);
-    background-color: rgb(211, 211, 211);
     text-align: center;
     padding: 2px;
     border-radius: .5rem;
     -webkit-app-region: drag;
     opacity: 0;
-    transition: opacity 0.3s ease; /* Adiciona uma transição suave para a mudança de opacidade */
+    transition: opacity 0.3s ease;
 }
 
+.copy-totalmts{
+    height: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.copymts{
+    margin: 0;
+}
