--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    width: 560px;
+    width: 460px;
     height: 300px;
     margin: 1rem;
     font-family: Roboto, sans-serif;
@@ -11,11 +11,12 @@ body{
 .preencher{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .box{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: left;
     margin: .5rem;
     margin-bottom: .2rem;
@@ -24,10 +25,11 @@ body{
     margin-bottom: .1rem;
     font-weight: 600;
     font-size: .8rem;
+    margin-left: 0.5rem;
 }
 .resp-preencher{
     font-size: 1rem;
-    margin: .2rem 1rem 1rem 0;
+    margin: 0.2rem 0.5rem 1rem 0.5rem;
     padding: .2rem;
     width: 7rem;
     height: 1.5rem;
